6/3/2014 - Remi
	- Added basic map initialization with a dummy map. 
	- Very crude and basic map drawing with no textures. (Solid colors)
	- Added area at bottom for UI. Gamescreen is now split into the game's "board" and "info" sections.
	- Some kind of base class for info UI manipulation
	- Proposal UI storyboards
6/4/2014 - Remi
	- Map scrolling
	- Terrain info based on cursor position
	- Added temp character portrait of Kaga <3
	- Fixed event handling to process diagonal/multi-key inputs
	- Minimap
	- Minimap scrolling
	- Added stats display and whatnot
	- Added displaying (horrible) sprites of kanmusu
	- Kanmusu are now movable. (But buggy)(Can stack)
	- Kanmusu don't stack by accident now wheee